@@ -191,6 +191,10 @@ formatC <- function (x, digits = NULL, width = NULL,
 	     } else # format == "g" or "e":
 	     rep.int(digits+8, n)
 	     )
+    ## sanity check for flags added 2.1.0
+    nf <- strsplit(flag, "")[[1]]
+    if(!all(nf %in% c("0", "+", "-", " ", "#")))
+       stop("'flag' can contain only '0+- #'")
     r <- .C("str_signif",
 	    x = x,
 	    n = n,
